fix spacing issue in about section for big-desktop size

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -200,7 +200,7 @@
         }
 
         @include respond(big-desktop) {
-          flex-basis: 60%;
+          flex-basis: 55%;
         }
       }
 
